# GDELT-ANALYSIS

./: .gitignore  README.md  main.py  pyproject.toml
dbt/: .user.yml  README.md  dbt_project.yml  profiles.yml
dbt/models/mart/: mart_country_activity.sql  mart_daily_event_tone.sql  mart_models.yml
dbt/models/staging/: sources.yml  stg_gdelt_events.sql  stg_gdelt_events.yml
dbt/tests/: assert_avg_tone_in_range.sql
docs/: infrastructure-setup.md
orchestration/: README.md  docker-compose.yml
orchestration/flows/: gdelt_daily_pipeline.yml
pipeline/: .env.example  README.md  ingest_gdelt.py  requirements.txt
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
