[project]
name = "de-zoomcamp-cap-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery>=1.11.1",
    "google-auth==2.29.0",
    "google-cloud-bigquery==3.20.1",
    "google-cloud-storage==2.16.0",
    "requests==2.31.0",
]
